_includes/manuals/1.10/4.3.6_smartproxy_puppet.md

Activate the Puppet management module within the Smart Proxy instance.  This module has two functions:

* reads the Puppet modules and manifests on the Puppet master, reporting the environments and classes that are declared, used when importing classes into Foreman
* optionally triggers immediate Puppet runs on clients using one of a number of implementations

It should be activated on Puppet masters that have the environments and modules available to import data from.  To use the Puppet run functionality, it also needs to be capable of executing *puppetrun* or equivalent implementation listed in the section below.  This works independently of the Puppet CA functionality, which may only be one of many Puppet masters in the environment. To enable this, make sure these lines are present in `/etc/foreman-proxy/settings.d/puppet.yml`:

<pre>
:enabled: https
:puppet_conf: /etc/puppet/puppet.conf
</pre>

##### Puppet class/environment imports

The proxy parses all of the Puppet manifests inside the environments declared from puppet.conf (set by `:puppet_conf`), which generates a list of all Puppet classes and the parameters they take.  These are imported by Foreman to generate the list of classes, smart class parameters and environments that they belong to.

<div class="alert alert-info">Parsing manifests is done using Puppet itself, which means the manifests must be valid and pass syntax checks, else they won't show up.  Use <code>puppet parser validate example.pp</code> to validate the content of a manifest.</div>

There are two ways to declare environments within Puppet.  Config environments are environments explicitly declared in puppet.conf, either with a single "modulepath" setting (which creates a single "production" environment or may be a wildcard), or with `[development]` section headers.  The proxy will parse puppet.conf in the same manner as Puppet to try and determine the known environments.

More information on configuring them is available in the [Puppet environment docs](https://docs.puppetlabs.com/guides/environment.html).  Since Puppet 3.5, these are deprecated in favor of directory environments.

Directory environments are enabled by adding "environmentpath" to puppet.conf.  When the proxy finds this setting, it uses this mode too.  The `:puppet_use_environment_api` proxy setting can be used to force this mode on or off, but when unset, it follows the presence of environmentpath (the default).  More information on configuring directory environments is available [in the Puppet docs](http://docs.puppetlabs.com/puppet/latest/reference/environments.html).

To get a list of environments and module paths, the proxy queries the Puppet master on its own API.  Typically the defaults will suffice, but the URL and settings used for the proxy to Puppet master API query can be controlled with the following settings in `/etc/foreman-proxy/settings.d/puppet.yml`:

<pre>
# URL of the puppet master itself for API requests
#:puppet_url: https://puppet.example.com:8140
# SSL certificates used to access the puppet master API
#:puppet_ssl_ca: /var/lib/puppet/ssl/certs/ca.pem
#:puppet_ssl_cert: /var/lib/puppet/ssl/certs/puppet.example.com.pem
#:puppet_ssl_key: /var/lib/puppet/ssl/private_keys/puppet.example.com.pem
</pre>

The Puppet master has to permit this API query.  Older installations of Puppet that have been upgraded may need a new entry in auth.conf prior to the last 'deny' entry:

<pre>
path /v2.0/environments
method find
allow *
</pre>

When scanning Puppet manifests, a cache is kept in memory to speed up subsequent import calls. It can be enabled/disabled with the following setting:

<pre>
# Cache options
:use_cache: true
</pre>

##### Puppet run providers

For the optional Puppet run functionality, one of a number of implementations can be chosen in `/etc/foreman-proxy/settings.d/puppet.yml`.

<pre>
:puppet_provider: puppetrun
:puppetrun_wait: false
</pre>

Available providers are:

* `puppetrun` - for puppetrun/kick, deprecated in Puppet 3, see section below
* `mcollective` - uses mco puppet, see section below
* `puppetssh` - run puppet over ssh
* `salt` - uses salt puppet.run
* `customrun` - calls a custom command with args

Once a provider is configured, in Foreman itself, enable "puppetrun" under *Adminster > Settings > Puppet* to activate the "Run Puppet" button on individual host pages.

The `puppetrun_wait` setting controls whether to block on completion of the Puppet command, so the result of the Puppet run can be returned to Foreman, else it's usually asynchronous.  When true, increase `proxy_request_timeout` under *Administer > Settings* in Foreman itself to ensure it waits longer for a response, as the Puppet run may take some time to complete.

##### puppetrun

`puppet kick` (or puppetrun in 2.x) can be used to trigger an immediate Puppet run on a client by connecting to the agent daemon on the client over HTTPS.  This method however is deprecated in Puppet 3 and isn't recommended for new deployments.

More information can be found in the [puppet kick](https://docs.puppetlabs.com/references/stable/man/kick.html) documentation, specifically the [Usage Notes](https://docs.puppetlabs.com/references/stable/man/kick.html#USAGE-NOTES) which describe the configuration of the agents to listen and authorize connections.

sudo access for the proxy is required to run the client - in your sudoers file ensure you have the following lines (use /opt/puppet/bin/puppet for Puppet Enterprise):

<pre>
Defaults:foreman-proxy !requiretty
foreman-proxy ALL = NOPASSWD: /usr/bin/puppet kick *
</pre>

If you are using Puppet 2.x, the proxy will use the older `puppetrun` command instead.  The sudoers entry should be:

<pre>
Defaults:foreman-proxy !requiretty
foreman-proxy ALL = NOPASSWD: /usr/sbin/puppetrun
</pre>

The `:puppet_user` setting controls which user to sudo to, which on some installations (notably PE) may be different.  When unset (`:puppet_user:`) then sudo will not be used.

##### MCollective

The proxy can trigger Puppet runs using the MCollective "puppet" agent.  To enable this, add this line to `/etc/foreman-proxy/settings.d/puppet.yml`:

    :puppet_provider: mcollective

And then add a sudoers rule:

    Defaults:foreman-proxy !requiretty
    foreman-proxy ALL = NOPASSWD: /usr/bin/mco puppet runonce *

The user that the smart proxy sudos to can be changed, notably for PE:

    # If you want to override the puppet_user above just for mco commands
    :mcollective_user: peadmin

If `:mcollective_user` is not specified, the value of `:puppet_user` will be used.  If both are unset, it will sudo to root.

##### puppetssh

The puppetssh provider uses SSH to connect to the client using SSH keys and run the Puppet agent command directly.  It is controlled by the following settings in `/etc/foreman-proxy/settings.d/puppet.yml`:

<pre>
# whether to use sudo before the ssh command
:puppetssh_sudo: false
# the command which will be sent to the host
:puppetssh_command: /usr/bin/puppet agent --onetime --no-usecacheonfailure
# With which user should the proxy connect
#:puppetssh_user: root
#:puppetssh_keyfile: /etc/foreman-proxy/id_rsa
</pre>

Here is a quick howto to enable puppetssh on your server.

On the `foreman-proxy server`, enable the puppetssh provider and uncomment user and ssh keys settings:
<pre>
sed -i 's!^#\?\(:puppet_provider:\).*$!\1 puppetssh!' \
  /etc/foreman-proxy/settings.d/puppet.yml
sed -i 's!^#\?\(:puppetssh_user:\).*$!\1 root!' \
  /etc/foreman-proxy/settings.d/puppet.yml
sed -i 's!^#\?\(:puppetssh_keyfile:\).*$!\1 /etc/foreman-proxy/id_rs!' \
  /etc/foreman-proxy/settings.d/puppet.yml
</pre>

We also need to actually generate this new SSH key:
<pre>
ssh-keygen -t rsa -N '' -f /etc/foreman-proxy/id_rsa
chgrp foreman-proxy /etc/foreman-proxy/id_rsa
chmod 640 /etc/foreman-proxy/id_rsa
</pre>

Then, foreman-proxy should be restarted. If using systemd, run:
<pre>systemctl restart foreman-proxy</pre>
Else, the good old service command should work:
<pre>service foreman-proxy restart</pre>

After that, you should make sure the user running foreman-proxy service has a valid home and a writable `.ssh subdirectory`.
Check defined home directory by running
<pre>
ls -d ~foreman-proxy
</pre>

It should return `/usr/share/foreman-proxy`. Now we will create a .ssh subdirectory and set the proper permissions:
<pre>
mkdir /usr/share/foreman-proxy/.ssh
chown foreman-proxy:foreman-proxy /usr/share/foreman-proxy/.ssh
chmod 700 /usr/share/foreman-proxy/.ssh
</pre>

An additional step, but not required (`security warning`) is to disable host keys checking. It means any host allowing this SSH keys to connect will be reachable, without the need to run ssh root@client as foreman-proxy user to accept the host key. The goal here is to allow automatic deployment by only population the `authorized_keys` file on new clients.

To enable such behavior, we will create a SSH client configuration file disable host key checking and not storing that kind of keys:
<pre>
echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile /dev/null" > /usr/share/foreman-proxy/.ssh/config
chown foreman-proxy:foreman-proxy /usr/share/foreman-proxy/.ssh/config
chmod 600 /usr/share/foreman-proxy/.ssh/config
</pre>

Finally, copy the foreman public key over the target client:
<pre>
su - foreman-proxy -s /bin/bash
ssh-copy-id -i /etc/foreman-proxy/id_rsa root@client-addr
</pre>

#### Salt

The salt provider uses Salt for remote execution, by executing the puppet module's run routine.  It is controlled by the following settings in `/etc/foreman-proxy/settings.d/puppet.yml`:

<pre>
# Custom salt puppet.run command
# Set :salt_puppetrun_cmd to 'puppet.run agent no-noop' to run in no-noop mode.
# Default command is puppet.run.
:salt_puppetrun_cmd: puppet.run
</pre>

##### customrun

The customrun provider allows configuration of a script that implements the Puppet run action in any way you require. Set the following configuration in `/etc/foreman-proxy/settings.d/puppet.yml`:

<pre>
# Set :customrun_cmd to the full path of the script you want to run, instead of /bin/false
:customrun_cmd: /bin/false
# Set :customrun_args to any args you want to pass to your custom script. The hostname of the
# system to run against will be appended after the custom commands.
:customrun_args: -ay -f -s
</pre>
